--- a/css/style.css
+++ b/css/style.css
@@ -241,6 +241,84 @@ h1, h2 {
 
 }
 
+#menu-main-section {
+        background-color: rgb(252, 245, 232);
+        padding-top: 60px;
+        padding-bottom: 100px;
+        padding-left: 40px;
+        padding-right: 40px;
+        text-align: center;
+        font-size: 120%;
+        letter-spacing: 1px;
+}
+
+#menu-main-section p {
+        padding-top: 20px;
+        padding-bottom: 40px;
+}
+
+#menu-panels {
+        height: 800px;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        align-items: center;
+}
+
+#menu-panel-item {
+        height: 700px;
+        width: 25%;
+        background-color:#ddead1;
+        border-radius: 30px;
+        box-shadow: 0 0 5px 3px rgba(50, 50, 50, .25);
+        text-align: left;
+        box-sizing: border-box;
+}
+
+.menu-panel-text {
+        width: 90%;
+        margin: 0 auto;
+}
+#menu-panel-item hr {
+        height:2px;
+        
+        border: solid #141e30;
+        border-bottom:0 ;
+        border-left: 0;
+        border-right: 0;
+        padding-bottom: 10px;
+        
+        
+}
+
+#menu-panel-item h2 {
+        
+        padding-top: 2%;
+        font-weight: 600;
+        font-size: 150% ;
+}
+
+#menu-panel-item p {
+        padding-top: 8px;
+        font-size: 80%;
+        font-weight: 600;
+}
+
+.list-item {
+        padding-top: 8px;
+}
+.title {
+        
+        display: inline;
+        text-align: left;
+}
+.price {
+        
+        display: inline;
+        text-align: right;
+        float: right;
+}
+
 
 
 /* Media Queries */ 
