--- a/css/style.css
+++ b/css/style.css
@@ -70,8 +70,10 @@ h1, h2 {
 #hero-image {
         height: 600px;
         width: 100%;
-        background: url('../images/hero-image.jpg') no-repeat center center;
-         background-size: cover;  
+        background: url(../css/images/flip-card-B.jpg) no-repeat center center;
+        background-size: cover;  
+        position: relative;
+        background-attachment: fixed;
         
 }
 
